--- a/pug/index.pug
+++ b/pug/index.pug
@@ -13,23 +13,32 @@ body
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
                 a#btn-nav-switch.icon-menu(href="javascript:;")
                     img(src="public/images/menu.svg", alt="")
-                nav 
-                    ul 
-                        li
-                            a(href="about_us.html") 關於我們
-                        li
-                            a(href="javascript:;") 產品介紹
-                            ul.submenu
-                                li 
-                                    a(href="product1.html") 冷氣清洗槽
-                                li 
-                                    a(href="product2.html") 手工具
-                                li 
-                                    a(href="product3.html") 零件
-                        li
-                            a(href="client.html") 客戶回饋
-                        li
-                            a(href="faq.html") 常見問題
+                .topcomposing
+                    .language
+                        ul 
+                            li 
+                                a(href="index.html") 繁體中文
+                            li 
+                                a(href="index.html") 日本語
+                            li 
+                                a(href="index.html") English
+                    nav 
+                        ul 
+                            li
+                                a(href="about_us.html") 關於我們
+                            li
+                                a(href="javascript:;") 產品介紹
+                                ul.submenu
+                                    li 
+                                        a(href="product1.html") 冷氣清洗槽
+                                    li 
+                                        a(href="product2.html") 手工具
+                                    li 
+                                        a(href="product3.html") 零件
+                            li
+                                a(href="client.html") 客戶回饋
+                            li
+                                a(href="faq.html") 常見問題
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
     .S1
