--- a/public/css/style.css
+++ b/public/css/style.css
@@ -524,9 +524,17 @@ header > .container > .row-display-nowrap > .topcomposing > nav > ul > li {
   padding-bottom: 20px;
 }
 
+.S2 > .container > .right > h2 > a:hover {
+  color: #2A66AC;
+}
+
 .S3 {
   background-color: #CDF4FF;
   padding-top: 20px;
+}
+
+.S3 > .container > .right > h2 > a:hover {
+  color: #2A66AC;
 }
 
 @media (min-width: 768px) {
