--- a/pug/about_us_en.pug
+++ b/pug/about_us_en.pug
@@ -9,7 +9,7 @@ body
     header 
         .container 
             .row-display-nowrap
-                a(href="index.html" )
+                a(href="index_en.html" )
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
                 a#btn-nav-switch.icon-menu(href="javascript:;")
                     img(src="public/images/menu.svg", alt="")
@@ -25,42 +25,42 @@ body
                     nav 
                         ul 
                             li
-                                a(href="about_us.html") 關於我們
+                                a(href="about_us_en.html") About us
                             li
-                                a(href="javascript:;") 產品介紹
+                                a(href="javascript:;") Product
                                 ul.submenu
                                     li 
-                                        a(href="product1.html") 冷氣清洗槽
+                                        a(href="product1_en.html") A/C Cleaning tank
                                     li 
-                                        a(href="product2.html") 手工具
+                                        a(href="product2_en.html") Tools
                                     li 
-                                        a(href="product3.html") 零件
+                                        a(href="product3_en.html") Parts
                             li
-                                a(href="client.html") 客戶回饋
+                                a(href="client_en.html") Client
                             li
-                                a(href="faq.html") 常見問題
+                                a(href="faq_en.html") Question
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
     section
         .breadcrumb 
             .container
-                a(href="index.html") 首頁
+                a(href="index_en.html") Front
                 span &nbsp; &gt; &nbsp;
-                a(href='about_us.html') 關於我們 
+                a(href='about_us_en.html') About us 
         .about1.container.row
-            p 　　天氣越來越炎熱，對冷氣的需求也逐漸增加，而為了讓冷氣使用起來乾淨又涼#[br] 爽，適時的清洗冷氣是必要的。我們致力於推出冷氣空調相關的產品，能用更輕鬆的 #[br] 方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。
-            P 　　我們每項產品的零件都是朝著輕巧、耐用、組裝簡單的方向去研發，為的就是讓#[br] 我們的產品成為人人都能輕鬆上手的好工具！
-            p 　　選擇真豪洗，選擇最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
+            p 　　The weather is getting hotter, and the demand for air-conditioning is also gradually increasing. In order to make the#[br] air conditioner clean and cool.It is necessary to clean the air conditioner in a timely manner. We are committed #[br]to launching air-conditioning related products. Maintain and clean air conditioners in an easier way to enjoy the #[br]clean and comfortable air-conditioning in this hot summer.
+            P 　　The parts of each of our products are developed in the direction of being lightweight, durable and easy to #[br]assemble. The purpose is to make our products a good tool that everyone can use easily!
+            p 　　Choose us, choose the easiest and most convenient way to clean the air conditioner, and bring #[br]the most comfortable environment to your family!
         .about2.container.row 
             .col-md-4.col-12
                 img.img-fluid(src="public/images/about1.png", alt="")
-                h3 主體架
+                h3 Main Frame
             .col-md-4.col-12
                 img.img-fluid(src="public/images/about2.png", alt="")
-                h3 集水袋
+                h3 Water Collection Bag
             .col-md-4.col-12
                 img.img-fluid(src="public/images/about3.png", alt="")
-                h3 外提袋
+                h3 Outside Carrier Bag
     footer 
         .container 
             .row 
