--- a/pug/client_en.pug
+++ b/pug/client_en.pug
@@ -9,7 +9,7 @@ body
     header 
         .container 
             .row-display-nowrap
-                a(href="index.html" )
+                a(href="index_en.html" )
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
                 a#btn-nav-switch.icon-menu(href="javascript:;")
                     img(src="public/images/menu.svg", alt="")
@@ -17,50 +17,42 @@ body
                     .language
                         ul 
                             li 
-                                a(href="about_us.html") 繁體中文
+                                a(href="client.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="about_us_en.html") English
+                                a(href="client_en.html") English
                     nav 
                         ul 
                             li
-                                a(href="about_us.html") 關於我們
+                                a(href="about_us_en.html") About us
                             li
-                                a(href="javascript:;") 產品介紹
+                                a(href="javascript:;") Product
                                 ul.submenu
                                     li 
-                                        a(href="product1.html") 冷氣清洗槽
+                                        a(href="product1_en.html") A/C Cleaning tank
                                     li 
-                                        a(href="product2.html") 手工具
+                                        a(href="product2_en.html") Tools
                                     li 
-                                        a(href="product3.html") 零件
+                                        a(href="product3_en.html") Parts
                             li
-                                a(href="client.html") 客戶回饋
+                                a(href="client_en.html") Client
                             li
-                                a(href="faq.html") 常見問題
+                                a(href="faq_en.html") Question
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
     section
         .breadcrumb 
             .container
-                a(href="index.html") 首頁
+                a(href="index_en.html") Front
                 span &nbsp; &gt; &nbsp;
-                a(href='about_us.html') 關於我們 
-        .about1.container.row
-            p 　　天氣越來越炎熱，對冷氣的需求也逐漸增加，而為了讓冷氣使用起來乾淨又涼#[br] 爽，適時的清洗冷氣是必要的。我們致力於推出冷氣空調相關的產品，能用更輕鬆的 #[br] 方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。
-            P 　　我們每項產品的零件都是朝著輕巧、耐用、組裝簡單的方向去研發，為的就是讓#[br] 我們的產品成為人人都能輕鬆上手的好工具！
-            p 　　選擇真豪洗，選擇最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！
-        .about2.container.row 
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/about1.png", alt="")
-                h3 主體架
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/about2.png", alt="")
-                h3 集水袋
-            .col-md-4.col-12
-                img.img-fluid(src="public/images/about3.png", alt="")
-                h3 外提袋
+                a(href='client_en.html') Client
+        .container 
+            .row 
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/client1.png", alt="")
+                .col-md-4.col-12 
+                    img.img-fluid(src="public/images/client2.png", alt="")
     footer 
         .container 
             .row 
@@ -71,7 +63,7 @@ body
                     img(src="public/images/icon-tfx.png", alt="")
                     p (04)-7321101
                 div.floor2           
-                    img.icon-mail(src="public/images/icon-mail.png", alt="")
+                    img.icon-mail(src="public/images/icon-mail2.png", alt="")
                     p black123963@gmail.com
                 div.floor2.line
                     img(src="public/images/icon-line2.png", alt="")
@@ -79,5 +71,4 @@ body
             p copyright
 
     script(src="https://code.jquery.com/jquery-3.6.0.min.js",integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=",crossorigin="anonymous")
-    script(src="public/js/WOW-master/dist/wow.min.js")
     script(src="public/js/easywash-script.js")
