--- a/pug/faq.pug
+++ b/pug/faq.pug
@@ -61,7 +61,7 @@ body
                     .icon-arrow 
                         i.fa-solid.fa-angle-down
                 .answer 
-                    p 可以連絡原本購買的店家，需要更換什麼店主就會幫你們叫貨喔!
+                    p 可以聯絡原本購買的店家，需要更換什麼店主就會幫你們叫貨喔!
             .question-container
                 .question 
                     h3 我是經銷商，請問進貨的管道是？
