--- a/pug/product2.pug
+++ b/pug/product2.pug
@@ -17,11 +17,11 @@ body
                     .language
                         ul 
                             li 
-                                a(href="index.html") 繁體中文
+                                a(href="product2.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="index.html") English
+                                a(href="product2_en.html") English
                     nav 
                         ul 
                             li
