--- a/pug/product2_4.pug
+++ b/pug/product2_4.pug
@@ -17,11 +17,11 @@ body
                     .language
                         ul 
                             li 
-                                a(href="index.html") 繁體中文
+                                a(href="product2_4.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="index.html") English
+                                a(href="product2_4_en.html") English
                     nav 
                         ul 
                             li
@@ -72,8 +72,6 @@ body
                         p 耐磨耐割，真皮皮革包覆，不怕螺絲造成磨損或割傷
                         p 鑰匙圈設計，隨取即用，輕巧便利
                         p 適用於各行各業，吸取各式各樣小零件
-                        p 
-                        p 
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-4-2.png", alt="")
                     .col-md-4.col-12
