--- a/pug/product3.pug
+++ b/pug/product3.pug
@@ -17,11 +17,11 @@ body
                     .language
                         ul 
                             li 
-                                a(href="index.html") 繁體中文
+                                a(href="product3.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="index.html") English
+                                a(href="product3_en.html") English
                     nav 
                         ul 
                             li
@@ -74,7 +74,7 @@ body
                         h3 中層U型架
                     .col-md-4.col-12  
                         img.img-fluid(src="public/images/parts5.png", alt="")
-                        h3 伸縮管
+                        h3 伸縮水管
                     .col-md-4.col-12  
                         img.img-fluid(src="public/images/parts6.png", alt="")
                         h3 上檔水板
