--- a/pug/index_en.pug
+++ b/pug/index_en.pug
@@ -9,7 +9,7 @@ body
     header 
         .container 
             .row-display-nowrap
-                a(href="index.html" )
+                a(href="index_en.html" )
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
                 a#btn-nav-switch.icon-menu(href="javascript:;")
                     img(src="public/images/menu.svg", alt="")
@@ -25,40 +25,40 @@ body
                     nav 
                         ul 
                             li
-                                a(href="about_us.html") 關於我們
+                                a(href="about_us_en.html") About us
                             li
-                                a(href="javascript:;") 產品介紹
+                                a(href="javascript:;") Product
                                 ul.submenu
                                     li 
-                                        a(href="product1.html") 冷氣清洗槽
+                                        a(href="product1_en.html")  A/C Cleaning tank
                                     li 
-                                        a(href="product2.html") 手工具
+                                        a(href="product2_en.html") Tools
                                     li 
-                                        a(href="product3.html") 零件
+                                        a(href="product3_en.html") Parts
                             li
-                                a(href="client.html") 客戶回饋
+                                a(href="client_en.html") Client
                             li
-                                a(href="faq.html") 常見問題
+                                a(href="faq_en.html") Question
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
     .S1
         .container
-            h2 最新消息
+            h2 Latest News
             ul.newspost 
                 li 
                     .date 2022-11-01
-                    .product1 產品資訊
+                    .product1 Product
                     .news 
-                        a(href="product2_3.html") 裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!
+                        a(href="product2_3_en.html") The enovation best assistant ,Adjustable wrench with strong forceps coming soon.
                 li 
                     .date 2022-11-01
-                    .product1 產品資訊
+                    .product1 Product
                     .news 
-                        a(href="product2_4.html") 螺絲小幫手-真豪吸上市囉!
+                        a(href="product2_4_en.html") Magnet Key Rings start selling!
                 li 
                     .date 2022-11-01
-                    .product1 產品資訊
-                    .news 四方吹清洗槽即將上市,請各位多多關注官方資訊!
+                    .product1 Product
+                    .news Cassette type air-conditioner cleaning tank coming soon!
             img.logo2-1(src="public/images/LOGO2.png", alt="")
     .S2   
         .container.row
@@ -66,10 +66,11 @@ body
                 img.img-fluid(src="public/images/product6.png", alt="") 
             .right.col-12
                 h2 
-                    a(href="product1_1.html") 真豪洗冷氣清洗槽
-                p 革命性產品
-                p 完全解決溢水的困擾
-                p 組裝快速省去繁雜工時
+                    a(href="product1_1_en.html") EasyWash
+                p Air-conditioning cleaning tank
+                p Revolutionary Product
+                p Completely solve the problem of overflow
+                p Quick and easy assembly to save time and labor
     .S3    
         .container.row  
             .left.col-12
@@ -77,11 +78,11 @@ body
                 img.logo2-2(src="public/images/LOGO2.png", alt="")
             .right.col-12.order-md-1
                 h2 
-                    a(href="product2_1.html") 真豪修邊刀
-                p 方便攜帶
-                p 好操作
-                p 耐用
-                p 刀頭更換快速
+                    a(href="product2_1_en.html") Easy Trimming
+                p Portable
+                p Durable
+                p Easy to operate
+                p Quick cutter head replacement
     footer 
         .container 
             .row 
