--- a/pug/product1_1.pug
+++ b/pug/product1_1.pug
@@ -17,11 +17,11 @@ body
                     .language
                         ul 
                             li 
-                                a(href="index.html") 繁體中文
+                                a(href="product1_1.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="index.html") English
+                                a(href="product1_1_en.html") English
                     nav 
                         ul 
                             li
@@ -70,7 +70,7 @@ body
                         p 輕量化,好攜帶
                         p 外袋展開大,好收納
                         p 左右出管都可輕鬆使用
-                        p 水槽可輕鬆調整上中下層
+                        p 清洗槽可輕鬆調整上中下層
                         p 兩段式排水接管(不會塞水 )
                         p 零件都可單一更換,不必整組換新
                         a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") 使用教學
