--- a/pug/product2_4_en.pug
+++ b/pug/product2_4_en.pug
@@ -9,7 +9,7 @@ body
     header 
         .container 
             .row-display-nowrap
-                a(href="index.html" )
+                a(href="index_en.html" )
                     img.logo.img-fluid(src="public/images/LOGO3.png", alt="") 
                 a#btn-nav-switch.icon-menu(href="javascript:;")
                     img(src="public/images/menu.svg", alt="")
@@ -17,68 +17,65 @@ body
                     .language
                         ul 
                             li 
-                                a(href="product2_3.html") 繁體中文
+                                a(href="product2_4.html") 繁體中文
                             li 
                                 a(href="index.html") 日本語
                             li 
-                                a(href="product2_3_en.html") English
+                                a(href="product2_4_en.html") English
                     nav 
                         ul 
                             li
-                                a(href="about_us.html") 關於我們
+                                a(href="about_us_en.html") About us
                             li
-                                a(href="javascript:;") 產品介紹
+                                a(href="javascript:;") Product
                                 ul.submenu
                                     li 
-                                        a(href="product1.html") 冷氣清洗槽
+                                        a(href="product1_en.html") A/C Cleaning tank
                                     li 
-                                        a(href="product2.html") 手工具
+                                        a(href="product2_en.html") Tools
                                     li 
-                                        a(href="product3.html") 零件
+                                        a(href="product3_en.html") Parts
                             li
-                                a(href="client.html") 客戶回饋
+                                a(href="client_en.html") Client
                             li
-                                a(href="faq.html") 常見問題
+                                a(href="faq_en.html") Question
     .banner 
         img.img-fluid(src="public/images/product8.png", alt="")
     section
         .breadcrumb 
             .container
-                a(href="index.html") 首頁
+                a(href="index_en.html") Front
                 span &nbsp; &gt; &nbsp;
-                a(href='product1.html') 產品介紹
+                a(href='product1_en.html') Product
                 span &nbsp; &gt; &nbsp;
-                a(href="product2.html") 手工具
+                a(href="product2_en.html") Tools
                 span &nbsp; &gt; &nbsp;
-                a(href="product2_3.html") 大力活動扳手
+                a(href="product2_4_en.html") Magnet Key Rings
         .container
             .product-left.col-12.col-md-9
                 dl 
                     dt 
-                        a(href="product2_1.html") 真豪修邊刀
+                        a(href="product2_1_en.html") Easy Trimming
                     dt 
-                        a(href="product2_2.html") 六角軸修邊刀頭
+                        a(href="product2_2_en.html") Electric trimming cutter head
                     dt 
-                        a(href="product2_3.html") 大力活動扳手
+                        a(href="product2_3_en.html") Adjustable wrench with strong forceps
                     dt 
-                        a(href="product2_4.html") 螺絲小幫手
+                        a(href="product2_4_en.html") Magnet Key Rings
             .product-right
                 .row 
                     .col-md-6.col-12 
-                        img.img-fluid(src="public/images/pd2-3-1.png", alt="")
+                        img.img-fluid(src="public/images/pd2-4-1.png", alt="")
                     .col-md-6.col-12
-                        h2 大力活動扳手
-                        p 防滑齒輪設計，夾持牢固
-                        p 刻度指示提高工作效率
-                        p 開口與調整螺母滑動順暢
-                        p 大力鎖緊構造安全
-                        p 防滑樹脂握把
+                        h2 Magnet Key Rings
+                        p Super strong suction, absorb a lot of screws without falling
+                        p Wear-resistant and cut-resistant, covered with genuine leather, not afraid of abrasion or cuts caused by screws
+                        p Key ring design, lightweight and convenient
+                        p Applicable to all walks of life, absorb all kinds of small parts
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/pd2-3-2.png", alt="")
+                        img.img-fluid(src="public/images/pd2-4-2.png", alt="")
                     .col-md-4.col-12
-                        img.img-fluid(src="public/images/pd2-3-3.png", alt="")
-                    .col-md-4.col-12
-                        img.img-fluid(src="public/images/pd2-3-4.png", alt="")
+                        img.img-fluid(src="public/images/pd2-4-3.png", alt="")
     footer 
         .container 
             .row 
