--- a/pug/faq.pug
+++ b/pug/faq.pug
@@ -17,9 +17,9 @@ body
                     .language
                         ul 
                             li 
-                                a(href="index.html") 繁體中文
+                                a(href="faq.html") 繁體中文
                             li 
-                                a(href="index.html") English
+                                a(href="faq_en.html") English
                     nav 
                         ul 
                             li
