--- a/public/css/scss/style.scss
+++ b/public/css/scss/style.scss
@@ -251,6 +251,9 @@ header>.container>.row-display-nowrap>.topcomposing>nav>ul>li{
     padding-left: 100px;
     font-size: 1.8em;
 }
+.S1>.container>.newspost>li>.news>a:hover{
+    color:#2A66AC;
+}
 .newspost{
     display: block;
 }
