--- a/public/css/style.css
+++ b/public/css/style.css
@@ -405,6 +405,10 @@ header > .container > .row-display-nowrap > .topcomposing > nav > ul > li {
   font-size: 1.8em;
 }
 
+.S1 > .container > .newspost > li > .news > a:hover {
+  color: #2A66AC;
+}
+
 .newspost {
   display: block;
 }
