--- a/pug/product1_2_en.pug
+++ b/pug/product1_2_en.pug
@@ -63,12 +63,12 @@ body
                     .col-md-6.col-12 
                         img.img-fluid(src="public/images/pd1-2-1.png", alt="")
                     .col-md-6.col-12
-                        h2 EasyWash(large) A/C Cleaning tank
-                        p Applicable Sizes:95~160CM
-                        p Also suitable for EasyWash size
-                        p Use the same way as EasyWash
-                        p Large size come with extension rods
-                        p The upper and lower heights can be further expanded by 6 cm
+                        h2 EasyWash(large) A/C Cleaning tank.
+                        p Applicable Sizes:95~160CM.
+                        p Also suitable for EasyWash size.
+                        p Use the same way as EasyWash.
+                        p Large size come with extension rods.
+                        p The upper and lower heights can be further expanded by 6 cm.
                         a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") Instructional Video
 
                     .col-md-4.col-12
