--- a/pug/product2_1_en.pug
+++ b/pug/product2_1_en.pug
@@ -66,11 +66,11 @@ body
                         img.img-fluid(src="public/images/pd2-1-1.png", alt="")
                     .col-md-6.col-12
                         h2 Easy Trimming
-                        p Applicable copper tube size 1~16mm
-                        p The outer layer of the cutter head is titanium-plated, which is not easy to rust
-                        p Replace the cutter head with a single touch
-                        p The purchase also comes with a small blade that can be used
-                        p Titanium-plated cutter heads can be purchased separately
+                        p Applicable copper tube size 1~16mm.
+                        p The outer layer of the cutter head is titanium-plated, which is not easy to rust.
+                        p Replace the cutter head with a single touch.
+                        p The purchase also comes with a small blade that can be used.
+                        p Titanium-plated cutter heads can be purchased separately.
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-1-2.png", alt="")
                     .col-md-4.col-12
