--- a/pug/product2_4_en.pug
+++ b/pug/product2_4_en.pug
@@ -66,10 +66,10 @@ body
                         img.img-fluid(src="public/images/pd2-4-1.png", alt="")
                     .col-md-6.col-12
                         h2 Magnet Key Rings
-                        p Super strong suction, absorb a lot of screws without falling
-                        p Wear-resistant and cut-resistant, covered with genuine leather, not afraid of abrasion or cuts caused by screws
-                        p Key ring design, lightweight and convenient
-                        p Applicable to all walks of life, absorb all kinds of small parts
+                        p Super strong suction, absorb a lot of screws without falling.
+                        p Wear-resistant and cut-resistant, covered with genuine leather, not afraid of abrasion or cuts caused by screws.
+                        p Key ring design, lightweight and convenient.
+                        p Applicable to all walks of life, absorb all kinds of small parts.
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-4-2.png", alt="")
                     .col-md-4.col-12
