--- a/pug/product1_1_en.pug
+++ b/pug/product1_1_en.pug
@@ -64,13 +64,13 @@ body
                         img.img-fluid(src="public/images/pd1-1-1.png", alt="")
                     .col-md-6.col-12
                         h2 EasyWash Air-conditioning cleaning tank
-                        p Applicable Sizes:76~130CM
-                        p Lightweight and easy to carry
-                        p The outside carrier bag is large and easy to store
-                        p Both left and right outlet tubes can be easily used
-                        p Cleaning tank for easy adjustment of upper, middle and lower layers
-                        p Two-stage drainage pipe(not clogged with water )
-                        p Parts can be replaced individually
+                        p Applicable Sizes:76~130CM.
+                        p Lightweight and easy to carry.
+                        p The outside carrier bag is large and easy to store.
+                        p Both left and right outlet tubes can be easily used.
+                        p Cleaning tank for easy adjustment of upper, middle and lower layers.
+                        p Two-stage drainage pipe(not clogged with water ).
+                        p Parts can be replaced individually.
                         a(href="https://youtu.be/PGiqnDiTnaI" target="_blank") Instructional Video
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd1-1-2.png", alt="")
