--- a/pug/product2_2_en.pug
+++ b/pug/product2_2_en.pug
@@ -67,9 +67,9 @@ body
                         img.img-fluid(src="public/images/pd2-2-1.png", alt="")
                     .col-md-6.col-12
                         h2 Electric trimming cutter head
-                        p Applicable copper tube size 1~16mm
-                        p The outer layer of the cutter head is titanium-plated, which is not easy to rust
-                        p For electric drills
+                        p Applicable copper tube size 1~16mm.
+                        p The outer layer of the cutter head is titanium-plated, which is not easy to rust.
+                        p For electric drills.
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-2-2.png", alt="")
                     .col-md-4.col-12
