--- a/pug/product2_3_en.pug
+++ b/pug/product2_3_en.pug
@@ -66,11 +66,11 @@ body
                         img.img-fluid(src="public/images/pd2-3-1.png", alt="")
                     .col-md-6.col-12
                         h2 Adjustable wrench with strong forceps
-                        p Anti-slip gear design for clamp firmly
-                        p Scale indication increases work efficiency
-                        p Opening and adjusting nut slide smoothly
-                        p Strong locking construction for safety
-                        p Non-slip resin grip
+                        p Anti-slip gear design for clamp firmly.
+                        p Scale indication increases work efficiency.
+                        p Opening and adjusting nut slide smoothly.
+                        p Strong locking construction for safety.
+                        p Non-slip resin grip.
                     .col-md-4.col-12
                         img.img-fluid(src="public/images/pd2-3-2.png", alt="")
                     .col-md-4.col-12
